--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 aiogram = "^2.25.1"
+python-dotenv = "^1.0.0"
+currencyconverter = "^0.17.9"
+setuptools = "^68.0.0"
+httpx = "^0.24.1"
+starlette = "^0.28.0"
 
 
 [build-system]
